follwo up to 95694bceab613ba679e25d6e9cb8a33cc29e9dce include tag in text area

--- a/modules/KalturaSupport/tests/CustomSkinAudioPlayer.html
+++ b/modules/KalturaSupport/tests/CustomSkinAudioPlayer.html
@@ -1,10 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	This custom skin uses external JS and CSS via setting the following uiVars:
-
-    <var key="IframeCustomPluginJs" value="http://www.kaltura.com/content/uiconf/ps/hbp/html5/v1.6.10/hbpAudio.js" overrideFlashvar="true"/>
-    <var key="IframeCustomjQueryUISkinCss" value="http://www.kaltura.com/content/uiconf/ps/hbp/html5/v1.6.10/audioPlayer.css" overrideFlashvar="true"/>
--->
 <html>
 <head>
 	<title>Audio Player Skin Test</title>
@@ -15,7 +9,12 @@
 	<a href="?forceMobileHTML5"> Force Mobile Safari</a> for testing with desktop chrome and safari.
 	<br /><br />
 	<div style="float:left">
-
+	This custom skin uses external JS and CSS via setting the following uiVars:<br>
+<textarea style="width:700px;height:100px">
+    <var key="IframeCustomPluginJs" value="http://www.kaltura.com/content/uiconf/ps/hbp/html5/v1.6.10/hbpAudio.js" overrideFlashvar="true"/>
+    <var key="IframeCustomjQueryUISkinCss" value="http://www.kaltura.com/content/uiconf/ps/hbp/html5/v1.6.10/audioPlayer.css" overrideFlashvar="true"/>
+</textarea>
+<br><br>
 		<!-- Audio Player -->
 		<object id="kaltura_player_1333029413"
 			name="kaltura_player_1333029413"
